# ft_printf

./: CMakeLists.txt  Makefile  __.SYMDEF SORTED  a.out  data.h  ft_printf  ft_printf.c  ft_printf.h  libftprintf  main  main.c  numeric.c  pars.c  parse.c  print_tool  print_tool.c  tools.c
includes/: ft_printf.h
lib/libft/: CMakeLists.txt  Makefile
lib/libft/includes/: libft.h
lib/libft/src/: ft_atoi_base.c  ft_ceil.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstappend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memcpy.c  ft_memdel.c  ft_memjoin.c  ft_nbrlen.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strsplit.c  ft_strsub.c  ft_tolower.c  ft_toupper.c  get_next_line.c
src/: apply_flags.c  data.c  e_double.c  e_double_tool.c  f_double.c  ft_printf.c  int_funcions.c  main.c  numeric.c  parse.c  parse_tool.c  print_tool.c  string_tool.c  tools.c
